
Changelog
=========

2018.5.2 (unreleased)
---------------------

- Return review_state ID in API summaries and introduce a new review_state_label attribute instead. [phgross]
- Fix quotation error and missing translations for task and dossier PDFs. [njohner]
- Make ReindexTaskPrincipalsInGlobalindex upgradestep more robust. [phgross]
- Show one line of each title and description in livesearch result. [njohner]


2018.5.1 (2018-11-23)
---------------------

- Update the changed date upgrade step. [jone]


2018.5.0 (2018-11-23)
---------------------

- Open notifications for resources on a foreign admin_unit in a new tab/window. [phgross]
- Fix bug in Windows8/10 and IE11/Edge: Select a task-reminder option will now properly stop spinning. [elioschmutz]
- Show the task-reminder selector spinner directly and not only on long-requests to remove complexity. [elioschmutz]
- Set \emergencystretch to 3em in latex templates. [njohner]
- Respect private_task feature flag also in forwarding forms. [phgross]
- Update schemas in API documentation to include "changed". [njohner]
- Ignore unauthorized traversal request in the response forms. [phgross]
- Don't display the reminder selector on tasks where it would not work. [Rotonen]
- Translate status message type in forms. [njohner]
- Skip check that tasks and documents are in a subdossier when resolving a subdossier. [njohner]
- Add Open XML Visio mimetypes. [deiferni]
- Bump ftw.bumblebee to 3.7.0 for new derived secrets for the demand endpoint. [deiferni]
- Fix issue when returning an excerpt to an already decided proposal. [njohner]
- Fix data in Task PDF when resolving a dossier. [njohner]
- Make save as pdf button colored green. [deiferni]
- Only show proposal notification settings when meeting feature is enabled. [deiferni]
- Use opaque_id instead of get parameter in SavePDFDocumentUnder. [njohner]
- Display group label in teamdetails instead of group title. [njohner]