@@ -1,6 +1,8 @@
 from ftw.builder import Builder
 from ftw.builder import create
 from ftw.testbrowser import browsing
+from opengever.base.favorite import FavoriteManager
+from opengever.base.model import CONTENT_TITLE_LENGTH
 from opengever.base.model import create_session
 from opengever.base.model.favorite import Favorite
 from opengever.base.oguid import Oguid
@@ -65,6 +67,24 @@ class TestFavoriteModel(IntegrationTestCase):
             Favorite.query.is_marked_as_favorite(self.dossier, self.regular_user))
 
 
+class TestManager(IntegrationTestCase):
+
+    @browsing
+    def test_titles_of_favorites_get_truncated_on_creation(self, browser):
+        self.login(self.regular_user, browser=browser)
+
+        browser.open(self.dossier, view='edit')
+        long_title = u''.join(u"\xe4" for i in range(400))
+        browser.fill({u'Title': long_title})
+        browser.click_on('Save')
+
+        manager = FavoriteManager()
+        fav = manager.add(self.regular_user.getId(), self.dossier)
+
+        self.assertEquals(long_title[:CONTENT_TITLE_LENGTH],
+                          Favorite.query.get(fav.favorite_id).title)
+
+
 class TestHandlers(IntegrationTestCase):
 
     def test_all_favorites_are_deleted_when_removing_object(self):
@@ -102,7 +122,7 @@ class TestHandlers(IntegrationTestCase):
         self.assertEquals(1, Favorite.query.count())
 
     @browsing
-    def test_titled_of_favorites_get_updated(self, browser):
+    def test_titles_of_favorites_get_updated(self, browser):
         self.login(self.regular_user, browser=browser)
 
         fav1 = create(Builder('favorite')
@@ -126,6 +146,25 @@ class TestHandlers(IntegrationTestCase):
         self.assertEquals('GEVER Weeklies',
                           Favorite.query.get(fav1.favorite_id).title)
         self.assertEquals(u'Anfragen 2018', Favorite.query.get(fav2.favorite_id).title)
+
+    @browsing
+    def test_titles_of_favorites_get_truncated_on_update(self, browser):
+        self.login(self.regular_user, browser=browser)
+
+        fav = create(Builder('favorite')
+                     .for_object(self.dossier)
+                     .for_user(self.regular_user))
+
+        self.assertEquals(
+            u'Vertr\xe4ge mit der kantonalen Finanzverwaltung', fav.title)
+
+        browser.open(self.dossier, view='edit')
+        long_title = u''.join(u"\xe4" for i in range(400))
+        browser.fill({u'Title': long_title})
+        browser.click_on('Save')
+
+        self.assertEquals(long_title[:CONTENT_TITLE_LENGTH],
+                          Favorite.query.get(fav.favorite_id).title)
 
     def test_icon_class_of_favorites_get_updated_on_checkin_checkout_document(self):
         self.login(self.administrator)
